--- a/src/app/component/customer/confirm/confirm.component.scss
+++ b/src/app/component/customer/confirm/confirm.component.scss
@@ -2,39 +2,42 @@
   padding: 0;
   overflow: unset;
 }
-button{
+
+button {
   cursor: pointer
 }
 
 .confirm-dialog {
   max-width: 700px !important;
   min-width: 100px !important;
-  .header-confirm{
+
+  .header-confirm {
     padding: 0.5em;
-    font-weight: 500;
-    border: 1px solid #007ad9;
-    background-color: #007ad9;
-    color: #eeeeee;
+    color: white;
     display: flex;
-    border-bottom: 0 none;
+    border-bottom: 0.1rem solid gainsboro;
     flex-direction: row;
+    align-items: center;
     justify-content: space-between;
     width: 100%;
+
     .mat-dialog-title {
       margin: 0;
-      color: #eeeeee;
-      font: 500 20px/32px Roboto, "Helvetica Neue", sans-serif
+      color: #000;
+      font: 500 20px/32px Roboto, "Helvetica Neue", sans-serif;
+      padding-left: 0.5rem;
     }
 
-    .close-button-dialog{
+    .close-button-dialog {
       padding: 0;
       margin: 0;
       outline: none;
-      color: white;
+      color: #000;
       border: 0;
-      background-color: #007ad9;
+      border-radius: 50%;
     }
-    .mat-button, .mat-icon-button, .mat-stroked-button, .mat-flat-button{
+
+    .mat-button, .mat-icon-button, .mat-stroked-button, .mat-flat-button {
       line-height: 0;
       min-width: 0;
     }
@@ -49,48 +52,57 @@ button{
   }
 
   .mat-dialog-custom {
-    .mat-dialog-content{
-      .body-dialog-custom{
-        .row{
+    .mat-dialog-content {
+      .body-dialog-custom {
+        .row {
           padding: 1em 1em 1em 2em;
         }
+
         border: 2px solid #edf1f7;
       }
     }
   }
 
   .mat-dialog-custom {
-    .mat-dialog-content{
-      .mat-dialog-actions{
+    .mat-dialog-content {
+      .mat-dialog-actions {
         padding-right: 1em;
         padding-bottom: 0.5em;
-        .btn-save-actions{
+
+        .btn-save-actions {
           background-color: #007ad9;
-          color:white;
+          color: white;
           border: 0.5px solid #007ad9;
           border-radius: 2px;
-          nb-icon{
-              font-size: 1rem
+
+          nb-icon {
+            font-size: 1rem
           }
+
           padding: 4px;
           width: 100px;
         }
-        .btn-save-actions:hover{
+
+        .btn-save-actions:hover {
           background-color: #319def;
         }
-        .btn-cancel-actions{
-          background-color:#f5f4f4;
+
+        .btn-cancel-actions {
+          background-color: #f5f4f4;
           margin-right: 5px;
           border: 0.5px solid #f5f4f4;
           border-radius: 2px;
-          nb-icon{
-              font-size: 1rem
+
+          nb-icon {
+            font-size: 1rem
           }
+
           padding: 4px;
           width: 120px;
         }
-        .btn-cancel-actions:hover{
-          background-color:white;
+
+        .btn-cancel-actions:hover {
+          background-color: white;
         }
       }
     }
