--- a/src/app/component/customer/control-modify-dialog/control-modify-dialog.component.scss
+++ b/src/app/component/customer/control-modify-dialog/control-modify-dialog.component.scss
@@ -1,66 +1,72 @@
-.input-element{
+.input-element {
   padding: 8px;
-  border: 2px solid #edf1f7;
+  border: 1px solid #656667;
 }
-.textarea-element{
+
+.textarea-element {
   padding: 8px;
   border: 2px solid #edf1f7;
   height: 200px;
 }
-.label-text{
-  font-weight: 350;
+
+.label-text {
+  font-weight: 750;
   display: flex;
   align-items: center
 }
+
 ::ng-deep .mat-dialog-container {
-  padding: 0px;
+  padding: 0;
   overflow: unset;
-  .mat-radio-label-content{
-    padding-left:4px;
+
+  .mat-radio-label-content {
+    padding-left: 4px;
   }
-  .row-radio{
-    .col-3{
-      padding-left: 0px;
+
+  .row-radio {
+    .col-3 {
+      padding-left: 0;
     }
   }
 }
-button{
+
+button {
   cursor: pointer
 }
-.isRequired{
-  color:red
+
+.isRequired {
+  color: red
 }
 
 .confirm-dialog {
-  .header-confirm{
+  .header-confirm {
     padding: 0.5em;
-    font-weight: 500;
-    border: 1px solid #007ad9;
-    background-color: #007ad9;
     color: white;
     display: flex;
-    border-bottom: 0 none;
+    border-bottom: 0.1rem solid gainsboro;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
     width: 100%;
+
     .mat-dialog-title {
       margin: 0;
-      color: white;
+      color: #000;
       font: 500 20px/32px Roboto, "Helvetica Neue", sans-serif;
       padding-left: 20px;
     }
-    .close-button-dialog{
-      padding: 0px;
-      margin: 0px;
+
+    .close-button-dialog {
+      padding: 0;
+      margin: 0;
       outline: none;
-      color: white;
+      color: #000;
       border: 0;
-      background-color: #007ad9;
     }
-    .mat-button, .mat-icon-button, .mat-stroked-button, .mat-flat-button{
-      line-height: 0px;
-      min-width: 0px;
+
+    .mat-button, .mat-icon-button, .mat-stroked-button, .mat-flat-button {
+      line-height: 0;
+      min-width: 0;
     }
   }
 
@@ -73,47 +79,60 @@ button{
   }
 
   .mat-dialog-custom {
-    .mat-dialog-content{
-      .body-dialog-custom{
+    .mat-dialog-content {
+      .body-dialog-custom {
         border-bottom: 3px solid #edf1f7;
-        .row{
-          padding: 0.5rem 0.5rem 0 1rem;
+
+        .row {
+          padding: 0.5rem 1rem 0 1rem;
         }
-        .form-group-container{
+
+        .form-group-container {
           margin-bottom: 5px;
         }
-        .date-picker-container{
-          .col-5{
-            padding-left:0px;
+
+        .date-picker-container {
+          .col-5 {
+            padding-left: 0;
           }
-          .date-picker{
-            .mat-form-field{
+
+          .date-picker {
+            .mat-form-field {
               width: 100%;
             }
           }
         }
 
       }
-      .title-form{
-        font-size: 25px;
+
+      .title-form {
         padding-left: 15px;
-        font-family: system-ui;
-        color: cornflowerblue
+        color: coral;
       }
-      ::ng-deep .mat-form-field-wrapper{
-        padding-bottom: 0px;
+
+      ::ng-deep .mat-form-field-wrapper {
+        padding-bottom: 0;
       }
     }
   }
 
   .mat-dialog-custom {
-    .mat-dialog-content{
-      .mat-dialog-actions{
-        margin-top: auto;
-        padding-top: 15px;
-        // margin-bottom: 15px;
-        padding-right: 1em;
-        .btn-save-actions{
+    .mat-dialog-content {
+      .mat-dialog-actions {
+        padding: 0 1.5rem;
+        min-height: max-content;
+        margin-bottom: 0;
+        margin-top: 1rem;
+
+        &[align='end'] {
+          justify-content: flex-end;
+        }
+
+        &[align='center'] {
+          justify-content: center;
+        }
+
+        .btn-save-actions {
           background-color: #007ad9;
           margin-right: 5px;
           color: white;
@@ -122,19 +141,22 @@ button{
           padding: 4px;
           width: 120px;
         }
-        .btn-save-actions:hover{
+
+        .btn-save-actions:hover {
           background-color: #319def;
         }
-        .btn-cancel-actions{
-          background-color:#f5f4f4;
+
+        .btn-cancel-actions {
+          background-color: #f5f4f4;
           margin-right: 5px;
           border: 0.5px solid #f5f4f4;
           border-radius: 2px;
           padding: 4px;
           width: 120px;
         }
-        .btn-cancel-actions:hover{
-          background-color:white;
+
+        .btn-cancel-actions:hover {
+          background-color: white;
         }
       }
     }
