--- a/src/app/component/topic-admin/topic.component.scss
+++ b/src/app/component/topic-admin/topic.component.scss
@@ -1,47 +1,68 @@
-.form-topic{
-  width:100%;
-  textarea.form-control {
-    max-height: 200px;
-    height: 85px;
-    border: 1px #d6d3d3 solid;
-  }
-  .btn-primary{
-    border-radius: 0px;
-    width: 120px
-  }
-}
-.button-topic{
- width: 10px;
-}
-mat-form-field{
-  margin-left: 20px;
-  width: auto;
-
-}
-.action-container{
-  margin-bottom: 10px;
-  display: flex;
-  justify-content: flex-end;
-  .action-wrap{
-    width: 150px;
-    margin-right: 15px;
-  }
-  a{
-    width: 100%;
-    color: white;
-    border-radius: 0px;
-    height: 40px;
+.wrap-topic-admin {
+  .action-container {
+    margin-bottom: 10px;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: flex-end;
+
+    .action-wrap {
+      width: 150px;
+      margin-right: 15px;
+    }
+
+    a {
+      width: 100%;
+      color: white;
+      border-radius: 0;
+      height: 40px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
   }
-}
-.header-topic-admin{
-  border-bottom: 2px solid #eae3ed;
-  h1{
-    padding: 15px 15px 0 15px;
+
+  .header-topic-admin {
+    border-bottom: 2px solid #eae3ed;
+
+    h1 {
+      padding: 15px 15px 0 15px;
+    }
   }
-}
-.body-topic-admin{
-  padding: 15px;
+
+  .body-topic-admin {
+    padding: 15px;
+
+    .form-topic {
+      width: 100%;
+
+      textarea.form-control {
+        max-height: 200px;
+        height: 85px;
+        border: 1px #000 solid;
+      }
+
+      textarea.mat-input-element {
+        padding: 2px 8px;
+        margin: -2px 0;
+      }
+
+      .btn-primary {
+        border-radius: 0;
+        width: 120px
+      }
+
+      .topic-selected {
+        border: 1px solid #000;
+      }
+    }
+
+    .button-topic {
+      width: 10px;
+    }
+
+    mat-form-field {
+      margin-left: 20px;
+      width: auto;
+    }
+  }
+
 }
