--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,16 +3,18 @@ html, body {
   height: 100%;
 }
 
-.select-global{
+.select-global {
   margin: 0 auto;
   border: 1px solid beige;
-  padding:10px
+  padding: 10px
+}
 
-}
 input.mat-input-element {
-  border-radius: 0px;
+  border-radius: 0;
 }
-textarea.form-control{
-  border-radius: 0px;
+
+textarea.form-control {
+  border-radius: 0;
 }
+
 @import '~bootstrap/scss/bootstrap';
